2026-09-13 후속 패치 반영: 환경 표에 아키텍처 추가, INHERIT 리다이렉트의 파이프 대기 조건, vfork 함수의 시스템 콜을 x86-64로 한정, posix_spawn의 clone3 대체 경로 명시. 반영한 패치 파일은 삭제
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>